--- a/src/components/landing-page/landing-page.component.html
+++ b/src/components/landing-page/landing-page.component.html
@@ -75,9 +75,17 @@
 	class="bg-cyan-50 lg:px-40 md:px-20 px-4 lg:py-8 py-4 flex flex-col gap-8">
 	<div class="mx-auto flex gap-3 bg-cyan-100 p-4 rounded-lg">
 		<mat-icon class="text-cyan-600">
-      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#00dddd"><path d="M640-80q-100 0-170-70t-70-170q0-100 70-170t170-70q100 0 170 70t70 170q0 100-70 170T640-80Zm0-80q66 0 113-47t47-113q0-66-47-113t-113-47q-66 0-113 47t-47 113q0 66 47 113t113 47Zm-480 0q-33 0-56.5-23.5T80-240v-304q0-8 1.5-16t4.5-16l80-184h-6q-17 0-28.5-11.5T120-800v-40q0-17 11.5-28.5T160-880h280q17 0 28.5 11.5T480-840v40q0 17-11.5 28.5T440-760h-6l66 152q-19 10-36 21t-32 25l-84-198h-96l-92 216v304h170q5 21 13.5 41.5T364-160H160Zm480-440q-42 0-71-29t-29-71q0-42 29-71t71-29v200q0-42 29-71t71-29q42 0 71 29t29 71H640Z"/></svg>
-    </mat-icon>
-    <p>Oat milk is available upon request</p>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				height="24px"
+				viewBox="0 -960 960 960"
+				width="24px"
+				fill="#00dddd">
+				<path
+					d="M640-80q-100 0-170-70t-70-170q0-100 70-170t170-70q100 0 170 70t70 170q0 100-70 170T640-80Zm0-80q66 0 113-47t47-113q0-66-47-113t-113-47q-66 0-113 47t-47 113q0 66 47 113t113 47Zm-480 0q-33 0-56.5-23.5T80-240v-304q0-8 1.5-16t4.5-16l80-184h-6q-17 0-28.5-11.5T120-800v-40q0-17 11.5-28.5T160-880h280q17 0 28.5 11.5T480-840v40q0 17-11.5 28.5T440-760h-6l66 152q-19 10-36 21t-32 25l-84-198h-96l-92 216v304h170q5 21 13.5 41.5T364-160H160Zm480-440q-42 0-71-29t-29-71q0-42 29-71t71-29v200q0-42 29-71t71-29q42 0 71 29t29 71H640Z" />
+			</svg>
+		</mat-icon>
+		<p>Oat milk is available upon request</p>
 	</div>
 	<div class="text-center lg:text-2xl: md:text-xl text-lg font-bold">ORDER</div>
 	<div class="flex justify-center gap-4">
@@ -140,19 +148,49 @@
 	<div class="lg:text-2xl: md:text-xl text-lg text-center font-bold">SEARCH OUR MENU</div>
 	<haru-filters></haru-filters>
 	<!-- <div class="flex flex-wrap justify-center lg:gap-8 gap-4 mt-8"> -->
-	<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 lg:gap-[2em] gap-[1em] transition-all">
-		@for (menuItem of menuItemsService.filteredMenuItems(); track $index) {
-		<haru-menu-item
-			#menuItemRef
-			[ngClass]="{
-        'transition-all': true,
-        'row-span-1 h-[6em]': !menuItemRef.isDetailShown(),
-        'row-span-2 lg:h-[14em] h-[13em]': menuItemRef.isDetailShown(),
-      }"
-			[menuItem]="menuItem"></haru-menu-item>
+	<haru-carousel
+		[slideCount]="menuItemsService.paginatedMenuItems().length">
+		@for (pageOfMenuItems of menuItemsService.paginatedMenuItems(); track $index) {
+		<div
+			class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 lg:gap-[2em] gap-[1em] keen-slider__slide">
+			@for (menuItem of pageOfMenuItems; track $index) {
+			<haru-menu-item
+				#menuItemRef
+				[ngClass]="{
+          'transition-all': true,
+          'row-span-1 h-[6em]': !menuItemRef.isDetailShown(),
+          'row-span-3 lg:h-[22em] h-auto': menuItemRef.isDetailShown(),
+        }"
+				[menuItem]="menuItem"></haru-menu-item>
+			}
+      @if (this.menuItemsService.paginatedMenuItems().length > 1) {
+        @for (empty of createEmptyArray(this.menuItemsService.pageSize() - pageOfMenuItems.length); track $index) {
+          <div class="row-span-1 h-[6em]"></div>
+        }
+      }
+		</div>
 		}
-	</div>
+	</haru-carousel>
+	<!-- @for (menuItem of menuItemsService.filteredMenuItems(); track $index) {
+  <haru-menu-item
+    #menuItemRef
+    [ngClass]="{
+      'transition-all': true,
+      'row-span-1 h-[6em]': !menuItemRef.isDetailShown(),
+      'row-span-2 lg:h-[14em] h-[13em]': menuItemRef.isDetailShown(),
+    }"
+    [menuItem]="menuItem"></haru-menu-item>
+  } -->
 </div>
+
+<!-- <haru-carousel>
+	<div class="keen-slider__slide number-slide1">1</div>
+	<div class="keen-slider__slide number-slide2">2</div>
+	<div class="keen-slider__slide number-slide3">3</div>
+	<div class="keen-slider__slide number-slide4">4</div>
+	<div class="keen-slider__slide number-slide5">5</div>
+	<div class="keen-slider__slide number-slide6">6</div>
+</haru-carousel> -->
 
 <!-- location -->
 <haru-footer
