--- a/src/components/menu-item/menu-item.component.html
+++ b/src/components/menu-item/menu-item.component.html
@@ -15,7 +15,7 @@
 			} @if (menuItem().imageUrl && menuItem().imageUrl !== "") {
 			<img
 				imageDialog
-				class="object-cover mx-auto xl:lg:md:my-4 my-2 xl:lg:md:h-[10em] xl:lg:md:h-[12em] xs:sm:w-full bg-teal-100 border-x-2 border-teal-200 rounded-lg"
+				class="object-cover mx-auto xl:lg:md:my-4 my-2 md:h-[10em] h-auto md:w-auto w-full bg-teal-100 border-x-2 border-teal-200 rounded-lg"
 				[src]="menuItem().imageUrl"
 				[alt]="menuItem().name" />
 			} }
