--- a/src/components/landing-page/landing-page.component.html
+++ b/src/components/landing-page/landing-page.component.html
@@ -57,16 +57,32 @@
 <!-- specials -->
 <div
 	id="specials"
-	class="bg-white lg:py-8 py-4">
+	class="bg-white lg:py-8 md:py-6 py-4">
 	<div class="flex justify-center">
-		<div class="font-bold xl:text-4xl lg:text-2xl sm:text-xl text-lg text-center mt-4">
-			HARU SPECIALS & FAVORITES
+		<div class="font-bold lg:text-2xl sm:text-xl text-lg text-center lg:mb-8 md:mb-6 mb-4">
+			HARU SPECIALS & MORE
 		</div>
 	</div>
-	<img
-		class="w-full"
-		src="images/haru-cafe-menu-billboard.png"
-		alt="haru-cafe-menu-billboard" />
+	<haru-carousel [slideCount]="3">
+    <div class="keen-slider__slide lg:px-0 px-4">
+      <img
+        class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border border-cyan-200 object-contain"
+        src="images/valentines-promotion.jpg"
+        alt="haru-cafe-menu-billboard" />
+    </div>
+    <div class="keen-slider__slide lg:px-0 px-4">
+      <video class="mx-auto rounded-lg lg:w-[350px] md:w-[300px] w-[200px]" controls muted>
+        <source src="videos/haru-promotion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div class="keen-slider__slide lg:px-0 px-4">
+      <img
+        class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border border-cyan-200 object-contain"
+        src="images/haru-cafe-menu-billboard.png"
+        alt="haru-cafe-menu-billboard" />
+    </div>
+  </haru-carousel>
 </div>
 
 <!-- menu -->
@@ -152,7 +168,7 @@
 		[slideCount]="menuItemsService.paginatedMenuItems().length">
 		@for (pageOfMenuItems of menuItemsService.paginatedMenuItems(); track $index) {
 		<div
-			class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 lg:gap-[2em] gap-[1em] keen-slider__slide">
+			class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-[1em] px-[0.5em] keen-slider__slide">
 			@for (menuItem of pageOfMenuItems; track $index) {
 			<haru-menu-item
 				#menuItemRef
