added other page of valentines day promo

--- a/src/components/landing-page/landing-page.component.html
+++ b/src/components/landing-page/landing-page.component.html
@@ -67,7 +67,13 @@
     <div class="keen-slider__slide lg:px-0 px-4">
       <img
         class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border border-cyan-200 object-contain"
-        src="images/valentines-promotion.jpg"
+        src="images/valentines-promotion-1.jpg"
+        alt="haru-cafe-menu-billboard" />
+    </div>
+    <div class="keen-slider__slide lg:px-0 px-4">
+      <img
+        class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border border-cyan-200 object-contain"
+        src="images/valentines-promotion-2.jpg"
         alt="haru-cafe-menu-billboard" />
     </div>
     <div class="keen-slider__slide lg:px-0 px-4">
