updated video tag attributes

--- a/src/components/landing-page/landing-page.component.html
+++ b/src/components/landing-page/landing-page.component.html
@@ -66,7 +66,7 @@
 	<haru-carousel #promotionalRef [slideCount]="promotionalRef.sliderRef().nativeElement.childElementCount">
     <!-- haru promotional video -->
     <div class="keen-slider__slide lg:px-0 px-4">
-      <video class="mx-auto rounded-lg h-[80vh]" controls poster="images/promos/haru-promo-poster.webp" autoplay muted>
+      <video class="mx-auto rounded-lg h-[80vh]" poster="images/promos/haru-promo-poster.webp" controls>
         <source src="videos/promos/haru-promotion.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -106,7 +106,7 @@
       </div>
     </div>
     <div class="keen-slider__slide lg:px-0 px-4">
-      <video class="mx-auto rounded-lg h-[80vh]" controls poster="images/promos/queen-never-cry-momo-drink-poster.webp" autoplay muted>
+      <video class="mx-auto rounded-lg h-[80vh]" poster="images/promos/queen-never-cry-momo-drink-poster.webp" controls>
         <source src="videos/promos/moe-moe-sweet-mint-beam-promo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
