--- a/src/components/landing-page/landing-page.component.html
+++ b/src/components/landing-page/landing-page.component.html
@@ -63,112 +63,97 @@
 			HARU SPECIALS & MORE
 		</div>
 	</div>
-	<haru-carousel #promotionalRef [slideCount]="promotionalRef.sliderRef().nativeElement.childElementCount">
+	<haru-carousel 
+    #promotionalRef 
+    [slideCount]="promotionalRef.sliderRef().nativeElement.childElementCount" 
+    [canClickDots]="false" 
+    [hasArrows]="false"
+    [loop]="true"
+    [slideInterval]="3000"
+    class="h-[80vh] w-auto">
     <!-- haru promotional video -->
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <video class="mx-auto rounded-lg h-[80vh]" poster="images/promos/haru-promo-poster.webp" controls>
+    <div class="flex items-center lg:px-0 px-4">
+      <video class="mx-auto rounded-lg h-full" poster="images/promos/haru-promo-poster.webp" controls>
         <source src="videos/promos/haru-promotion.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
     <!-- arisen lychee lemonade -->
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/arisen-lychee-lemonade.webp"
-          alt="Arisen Lychee Lemonade" />
-      </div>
+    <div class="lg:px-0 px-4 flex items-center h-full">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/arisen-lychee-lemonade.webp"
+        alt="Arisen Lychee Lemonade" />
     </div>
     <!-- dandadan -->
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/moe-moe-sweet-mint-beam.webp"
-          alt="Moe Moe Sweet Mint Beam" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/moe-moe-sweet-mint-beam.webp"
+        alt="Moe Moe Sweet Mint Beam" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/cursed-turbo-razz-soda.webp"
-          alt="Cursed Turbo Razz Soda" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/cursed-turbo-razz-soda.webp"
+        alt="Cursed Turbo Razz Soda" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/strawberry-butterfly-spiral.webp"
-          alt="strawberry Butterfly Spiral" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/strawberry-butterfly-spiral.webp"
+        alt="strawberry Butterfly Spiral" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <video class="mx-auto rounded-lg h-[80vh]" poster="images/promos/queen-never-cry-momo-drink-poster.webp" controls>
+    <div class="flex items-center lg:px-0 px-4">
+      <video class="mx-auto rounded-lg h-full" poster="images/promos/queen-never-cry-momo-drink-poster.webp" controls>
         <source src="videos/promos/moe-moe-sweet-mint-beam-promo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
     <!-- demon slayer -->
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/chocolate-form-flowing-mint-latte.webp"
-          alt="Chocolate form Flowing Mint Latte" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/chocolate-form-flowing-mint-latte.webp"
+        alt="Chocolate form Flowing Mint Latte" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/harmonic-grapeade.webp"
-          alt="Harmonic Grapeade" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/harmonic-grapeade.webp"
+        alt="Harmonic Grapeade" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/lemonade-type-explosive-razz.webp"
-          alt="Lemonade Type Explosive Razz" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/lemonade-type-explosive-razz.webp"
+        alt="Lemonade Type Explosive Razz" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/love-blossom-matcha-latte.webp"
-          alt="Love Blossom Matcha Latte" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/love-blossom-matcha-latte.webp"
+        alt="Love Blossom Matcha Latte" />
     </div>
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/mango-flameade.webp"
-          alt="Mango Flameade" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/mango-flameade.webp"
+        alt="Mango Flameade" />
     </div>
     <!-- misc -->
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/its-cold-drink-it.webp"
-          alt="Its Cold, Drink It" />
-      </div>
+    <div class="flex items-center h-full lg:px-0 px-4">
+      <img
+        class="sm:h-full sm:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/its-cold-drink-it.webp"
+        alt="Its Cold, Drink It" />
     </div>
     <!-- billboard -->
-    <div class="keen-slider__slide lg:px-0 px-4">
-      <div class="flex items-center h-full">
-        <img
-          class="lg:h-[80vh] w-auto h-auto lg:mx-auto mx-0 rounded-lg border-2 border-cyan-200 object-contain"
-          src="images/promos/haru-cafe-menu-billboard.webp"
-          alt="haru-cafe-menu-billboard" />
-      </div>
+    <div class="flex justify-center items-center h-full lg:px-0 px-4">
+      <img
+        class="md:h-full md:w-auto w-full mx-auto rounded-lg border-2 border-cyan-200 object-contain"
+        src="images/promos/haru-cafe-menu-billboard.webp"
+        alt="haru-cafe-menu-billboard" />
     </div>
   </haru-carousel>
 </div>
