added autoplay back to videos with playsinline

--- a/src/components/landing-page/landing-page.component.html
+++ b/src/components/landing-page/landing-page.component.html
@@ -73,7 +73,7 @@
     class="h-[80vh] w-auto">
     <!-- haru promotional video -->
     <div class="flex items-center lg:px-0 px-4">
-      <video class="mx-auto rounded-lg h-full" poster="images/promos/haru-promo-poster.webp" controls>
+      <video class="mx-auto rounded-lg h-full" poster="images/promos/haru-promo-poster.webp" controls autoplay muted playsInline>
         <source src="videos/promos/haru-promotion.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -105,7 +105,7 @@
         alt="strawberry Butterfly Spiral" />
     </div>
     <div class="flex items-center lg:px-0 px-4">
-      <video class="mx-auto rounded-lg h-full" poster="images/promos/queen-never-cry-momo-drink-poster.webp" controls>
+      <video class="mx-auto rounded-lg h-full" poster="images/promos/queen-never-cry-momo-drink-poster.webp" controls autoplay muted playsInline>
         <source src="videos/promos/moe-moe-sweet-mint-beam-promo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
